if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/jvrc_mj_description/CMakeLists.txt")
  message(FATAL_ERROR "No CMakeLists.txt in jvrc_mj_description folder, did you run `git submodule update --init`?")
endif()
add_subdirectory(jvrc_mj_description)

function(setup_env_object NAME ENV_OBJECT)
  set(YAML_OUT "${CMAKE_CURRENT_BINARY_DIR}/${NAME}.yaml")
  configure_file(${NAME}.in.yaml "${YAML_OUT}")
  install(FILES "${YAML_OUT}" DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}")
  install(FILES "${NAME}.xml" DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}/${ENV_OBJECT}")
  install(DIRECTORY assets DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}/${ENV_OBJECT}")
endfunction()

setup_env_object(ground env)
setup_env_object(box object)
setup_env_object(longtable object)
